<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Poker Project</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_player__name">Player_Name</string>
    <string name="player">Player Name</string>
    <string name="play">Play</string>
    <string name="view">View Hand</string>
    <string name="name">Enter Player Name</string>
    <string name="submit">Submit</string>
    <string name="title_activity_play">Play</string>
    <string name="title_activity_view__hand">View_Hand</string>
    <string name="splash_screen">POKER</string>
    <string name="wins">=wins=</string>
    <string name="poker">POKER</string>
    <string name="royal_flush">Royal Flush - $1000</string>
    <string name="straight_flush">Straight Flush - $250</string>
    <string name="four_of_a_kind">Four of a Kind - $100</string>
    <string name="full_house">Full House - $50</string>
    <string name="flush">Flush - $30</string>
    <string name="straight_hand">Straight - $25</string>
    <string name="three_of_a_kind">Three of a Kind - $20</string>
    <string name="two_pair">2 Pair - $10</string>
    <string name="pair">Pair - $5</string>
    <string name="royal_explain">All cards are the same suit, run in sequence A, K, Q K, 10</string>
    <string name="straight_flush_explain">All cards are the same suit and run in sequence</string>
    <string name="four_explain">Four cards of the same rank</string>
    <string name="full_house_explain">A pair and a three of a kind</string>
    <string name="flush_explain">All cards are the same suit.</string>
    <string name="straight_explain">All cards run in sequence.</string>
    <string name="three_explain">Three cards of the same rank</string>
    <string name="two_pair_explain">Two pairs of cards</string>
    <string name="pair_explain">Two of the same cards with a rank of 10 or more</string>
    <string name="hands_played">Hands played: </string>
    <string name="bank">Bank: $</string>
    <string name="menu">MENU</string>
    <string name="deal">DEAL</string>
    <string name="win_hand">WINS</string>
    <string name="hold">HOLD</string>
    <string name="Throw">THROW</string>
    <string name="title_activity_win_list">WinList</string>
    <string name="player_name">Player Hand</string>

    <array name="random_card">
        <item>@drawable/ace_of_clubs</item>
        <item>@drawable/ace_of_diamonds</item>
        <item>@drawable/ace_of_hearts</item>
        <item>@drawable/ace_of_spades</item>
        <item>@drawable/c10_of_clubs</item>
        <item>@drawable/c10_of_diamonds</item>
        <item>@drawable/c10_of_hearts</item>
        <item>@drawable/c10_of_spades</item>
        <item>@drawable/c2_of_clubs</item>
        <item>@drawable/c2_of_diamonds</item>
        <item>@drawable/c2_of_hearts</item>
        <item>@drawable/c2_of_spades</item>
        <item>@drawable/c3_of_clubs</item>
        <item>@drawable/c3_of_diamonds</item>
        <item>@drawable/c3_of_hearts</item>
        <item>@drawable/c3_of_spades</item>
        <item>@drawable/c4_of_clubs</item>
        <item>@drawable/c4_of_diamonds</item>
        <item>@drawable/c4_of_hearts</item>
        <item>@drawable/c4_of_spades</item>
        <item>@drawable/c5_of_clubs</item>
        <item>@drawable/c5_of_diamonds</item>
        <item>@drawable/c5_of_hearts</item>
        <item>@drawable/c5_of_spades</item>
        <item>@drawable/c6_of_clubs</item>
        <item>@drawable/c6_of_diamonds</item>
        <item>@drawable/c6_of_hearts</item>
        <item>@drawable/c6_of_spades</item>
        <item>@drawable/c7_of_clubs</item>
        <item>@drawable/c7_of_diamonds</item>
        <item>@drawable/c7_of_hearts</item>
        <item>@drawable/c7_of_spades</item>
        <item>@drawable/c8_of_clubs</item>
        <item>@drawable/c8_of_diamonds</item>
        <item>@drawable/c8_of_hearts</item>
        <item>@drawable/c8_of_spades</item>
        <item>@drawable/c9_of_clubs</item>
        <item>@drawable/c9_of_diamonds</item>
        <item>@drawable/c9_of_hearts</item>
        <item>@drawable/c9_of_spades</item>
        <item>@drawable/jack_of_clubs</item>
        <item>@drawable/jack_of_diamonds</item>
        <item>@drawable/jack_of_hearts</item>
        <item>@drawable/jack_of_spades</item>
        <item>@drawable/king_of_clubs</item>
        <item>@drawable/king_of_diamonds</item>
        <item>@drawable/king_of_hearts</item>
        <item>@drawable/king_of_spades</item>
        <item>@drawable/queen_of_clubs</item>
        <item>@drawable/queen_of_diamonds</item>
        <item>@drawable/queen_of_hearts</item>
        <item>@drawable/queen_of_spades</item>
    </array>

    <string name="title_activity_blank_">Blank_Activity</string>
    <string name="browse_title"><![CDATA[Videos by Your Company]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="vertical_grid_title"><![CDATA[Vertical Video Grid]]></string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="init_text">00:00</string>
    <string name="play_pause_description">Play Pause Button</string>
    <string name="loading">Loading…</string>
    <string name="no_video_found">No video was found</string>
    <string name="about_app">About DemoCast Player</string>
    <string name="version">Version: %1$s</string>
    <string name="popular_header">Popular Videos</string>
    <string name="preferences">PREFERENCES</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="should_start">shouldStart</string>
    <string name="start_position">startPosition</string>
    <string name="search_results">Search Results</string>
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="oops">Oops</string>
    <string name="title_activity_large_screen">LargeScreen</string>
    <string name="title_activity_play_fragment">PlayFragment</string>

</resources>
