<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.trent.cs467project2.MainMenu"
    android:background="@drawable/background"
  >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
            <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player"
            android:id="@+id/button"
                android:layout_weight="1"
                android:layout_above="@+id/button2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="32dp"
                android:background="@color/catamount_purple"
                android:textColor="@color/catamount_gold" />

            <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:id="@+id/button2"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/catamount_purple"
                android:textColor="@color/catamount_gold" />

            <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view"
            android:id="@+id/button3"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="58dp"
                android:background="@color/catamount_purple"
                android:textColor="@color/catamount_gold" />
        </RelativeLayout>
</RelativeLayout>
