<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:text="@string/hands_played"
            android:id="@+id/textView4"
            android:layout_weight="0.04"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/view_hands_counter"
            android:layout_weight="0.04"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView4"
            android:layout_toEndOf="@+id/textView4"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank"
            android:id="@+id/textView5"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@android:color/black"
            android:layout_alignTop="@+id/bank_counter"
            android:layout_toLeftOf="@+id/bank_counter"
            android:layout_toStartOf="@+id/bank_counter" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bank_counter"
            android:layout_marginRight="44dp"
            android:layout_marginEnd="44dp"
            android:layout_alignBottom="@+id/view_hands_counter"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player_name"
            android:textStyle="bold"
            android:textSize="30dp"
            android:textColor="@android:color/black"
            android:layout_below="@+id/view_hands_counter"
            android:layout_centerHorizontal="true"
            android:text="PLAYER&apos;s Hand:" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:weightSum="5">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/card1"
            android:layout_weight="1"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/card2"
            android:layout_weight="1"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"/>


        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/card3"
            android:layout_weight="1"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"/>


        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/card4"
            android:layout_weight="1"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"/>


        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/card5"
            android:layout_weight="1"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:id="@+id/menu_button"
            android:layout_marginRight="43dp"
            android:layout_marginEnd="43dp"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/deal_button"
            android:layout_toStartOf="@+id/deal_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deal"
            android:id="@+id/deal_button"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/win_hand"
            android:id="@+id/win_button"
            android:layout_marginLeft="51dp"
            android:layout_marginStart="51dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/deal_button"
            android:layout_toEndOf="@+id/deal_button" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hold"
            android:id="@+id/hold_button1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hold"
            android:id="@+id/hold_button2"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/menu_button"
            android:layout_alignEnd="@+id/menu_button"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="5dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hold"
            android:id="@+id/hold_button3"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />


        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hold"
            android:id="@+id/hold_button4"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/deal_button"
            android:layout_toEndOf="@+id/deal_button"
            android:layout_marginLeft="40dp" />


        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hold"
            android:id="@+id/hold_button5"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/win_button"
            android:layout_toEndOf="@+id/win_button"
            android:layout_marginLeft="25dp" />

    </RelativeLayout>

</LinearLayout>